made a mock-up in HTML & CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
+    <title>Homework 10</title>
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
@@ -15,8 +15,58 @@
         </div>
         <div class="card-body">
           <div class="card-item">
-            <h1>Test</h1>
-            <p>Text</p></div>
+            <div class="card-item-heading">Jared <br> Manager</div>
+            <div class="card-item-body">
+              <div class="card-item-p">ID: 1</div>
+              <div class="card-item-p">Email: jared@fakemail.com</div>
+              <div class="card-item-p">Office #: 1</div>
+            </div>
+           </div>
+
+           <div class="card-item">
+            <div class="card-item-heading">Jared <br> Manager</div>
+            <div class="card-item-body">
+              <div class="card-item-p">ID: 1</div>
+              <div class="card-item-p">Email: jared@fakemail.com</div>
+              <div class="card-item-p">Office #: 1</div>
+            </div>
+           </div>
+
+           <div class="card-item">
+            <div class="card-item-heading">Jared <br> Manager</div>
+            <div class="card-item-body">
+              <div class="card-item-p">ID: 1</div>
+              <div class="card-item-p">Email: jared@fakemail.com</div>
+              <div class="card-item-p">Office #: 1</div>
+            </div>
+           </div>
+
+           <div class="card-item">
+            <div class="card-item-heading">Jared <br> Manager</div>
+            <div class="card-item-body">
+              <div class="card-item-p">ID: 1</div>
+              <div class="card-item-p">Email: jared@fakemail.com</div>
+              <div class="card-item-p">Office #: 1</div>
+            </div>
+           </div>
+
+           <div class="card-item">
+            <div class="card-item-heading">Jared <br> Manager</div>
+            <div class="card-item-body">
+              <div class="card-item-p">ID: 1</div>
+              <div class="card-item-p">Email: jared@fakemail.com</div>
+              <div class="card-item-p">Office #: 1</div>
+            </div>
+           </div>
+
+           <div class="card-item">
+            <div class="card-item-heading">Jared <br> Manager</div>
+            <div class="card-item-body">
+              <div class="card-item-p">ID: 1</div>
+              <div class="card-item-p">Email: jared@fakemail.com</div>
+              <div class="card-item-p">Office #: 1</div>
+            </div>
+           </div>
 
       </div>
     </div>
