update, functional without JEst testing

--- a/mock-up.html
+++ b/mock-up.html
@@ -28,7 +28,7 @@
             <div class="card-item-body">
               <div class="card-item-p">ID: 1</div>
               <div class="card-item-p">Email: jared@fakemail.com</div>
-              <div class="card-item-p">Office #: 1</div>
+              <div class="card-item-p"><a href='https://github.com/sean-mcelwain'>sean-mcelwain</a></div>
             </div>
            </div>
 
