--- a/page.html
+++ b/page.html
@@ -24,43 +24,51 @@ body {font-family: sans-serif; background-color: #e0e0e0; padding: 20px;}
 </div> 
 <div class='card-body'> 
 <div class='card-item'> 
-<div class='card-item-heading'>fsaf<br> Manager</div> 
+<div class='card-item-heading'>fds<br> Manager</div> 
 <div class='card-item-body'> 
-<div class='card-item-p'>ID: fdsa</div> 
-<div class='card-item-p'>Email: sfda</div> 
-<div class='card-item-p'>Office #: asdf</div> 
+<div class='card-item-p'>ID: asfd</div> 
+<div class='card-item-p'>Email: <a href='mailto:sean_mcelwain@hotmail.com'>sean_mcelwain@hotmail.com</a></div> 
+<div class='card-item-p'>Office #: sdaf</div> 
 </div> 
 </div> 
 <div class='card-item'> 
-<div class='card-item-heading'><br>Intern</div> 
+<div class='card-item-heading'>Sean<br>Engineer</div> 
 <div class='card-item-body'> 
-<div class='card-item-p'>ID: sdaf</div> 
-<div class='card-item-p'>Email: asdf</div> 
-<div class='card-item-p'>GitHub: asdf</div> 
+<div class='card-item-p'>ID: 23</div> 
+<div class='card-item-p'>Email: <a href='mailto:sean.mcelwain@outlook.com'>sean.mcelwain@outlook.com</a></div> 
+<div class='card-item-p'>GitHub Profile: <a href='https://github.com/sean-mcelwain'>sean-mcelwain</a></div> 
 </div> 
 </div> 
 <div class='card-item'> 
-<div class='card-item-heading'>dsaf<br>Engineer</div> 
-<div class='card-item-body'> 
-<div class='card-item-p'>ID: fsda</div> 
-<div class='card-item-p'>Email: sdaf</div> 
-<div class='card-item-p'>GitHub: dsaf</div> 
-</div> 
-</div> 
-<div class='card-item'> 
-<div class='card-item-heading'>sdaf<br>Engineer</div> 
+<div class='card-item-heading'>sdfaf<br>Engineer</div> 
 <div class='card-item-body'> 
 <div class='card-item-p'>ID: sfad</div> 
-<div class='card-item-p'>Email: sfda</div> 
-<div class='card-item-p'>GitHub: fsda</div> 
+<div class='card-item-p'>Email: <a href='mailto:afsd'>afsd</a></div> 
+<div class='card-item-p'>GitHub Profile: <a href='https://github.com/fasd'>fasd</a></div> 
 </div> 
 </div> 
 <div class='card-item'> 
-<div class='card-item-heading'>adsf<br>Intern</div> 
+<div class='card-item-heading'><br>Engineer</div> 
 <div class='card-item-body'> 
-<div class='card-item-p'>ID: safd</div> 
-<div class='card-item-p'>Email: asfd</div> 
-<div class='card-item-p'>GitHub: fsda</div> 
+<div class='card-item-p'>ID: </div> 
+<div class='card-item-p'>Email: <a href='mailto:'></a></div> 
+<div class='card-item-p'>GitHub Profile: <a href='https://github.com/'></a></div> 
+</div> 
+</div> 
+<div class='card-item'> 
+<div class='card-item-heading'><br>Engineer</div> 
+<div class='card-item-body'> 
+<div class='card-item-p'>ID: </div> 
+<div class='card-item-p'>Email: <a href='mailto:'></a></div> 
+<div class='card-item-p'>GitHub Profile: <a href='https://github.com/'></a></div> 
+</div> 
+</div> 
+<div class='card-item'> 
+<div class='card-item-heading'><br>Engineer</div> 
+<div class='card-item-body'> 
+<div class='card-item-p'>ID: </div> 
+<div class='card-item-p'>Email: <a href='mailto:'></a></div> 
+<div class='card-item-p'>GitHub Profile: <a href='https://github.com/'></a></div> 
 </div> 
 </div> 
 </div> 
